Move each assertion to new test